--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "framer-motion": "^12.16.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
