--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "country-telephone-data": "^0.6.3",
     "framer-motion": "^12.16.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
@@ -18,6 +20,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-player": "^2.16.0",
+    "react-select": "^5.10.1",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
